fix small typos

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This means that there is only **one neuron** in the logistic regression neural network is basically a neuron in the output layer. It takes inputs that we *know*, and it directly outputs the observed output, with no layers in between. If this is the case, the neural network network is a **1-layer neural network**."
+    "This means that there is only **one neuron** in the logistic regression neural network is basically a neuron in the output layer. It takes inputs that we *know*, and it directly outputs the observed output, with no layers in between. If this is the case, the neural network is a **1-layer neural network**."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rember that in each of the nodes in the hidden layer, a linear transformation will take place, as well as a transormation because of an activation function. "
+    "Remember that in each of the nodes in the hidden layer, a linear transformation will take place, as well as a transformation because of an activation function. "
    ]
   },
   {
@@ -210,7 +210,7 @@
    "source": [
     "**Some questions to think about** \n",
     "- What are the dimensions of the matrices associated here?\n",
-    "- The 4 expressions above don't take into account several training samples. Imagine we use a superscript (i). How do you rewrite these epressions?"
+    "- The 4 expressions above don't take into account several training samples. Imagine we use a superscript (i). How do you rewrite these expressions?"
    ]
   },
   {
@@ -612,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
