move from figures to images

--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](figures/log_reg_deriv.png)"
+    "![title](images/log_reg_deriv.png)"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](figures/small_log.png)"
+    "![title](images/small_log.png)"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](figures/two_network.png)"
+    "![title](images/two_network.png)"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](figures/small_deeper.png)"
+    "![title](images/small_deeper.png)"
    ]
   },
   {
@@ -612,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
