--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/small_log.png)"
+    "<img src='images/new_small_log.png' width='40%'>"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/two_network.png)"
+    "<img src='images/new_two_network.png'>"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/small_deeper.png)"
+    "<img src='images/new_small_deeper.png' width='700'>"
    ]
   },
   {
@@ -612,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
