--- a/index.ipynb
+++ b/index.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/log_reg_deriv.png)"
+    "<img src=\"./images/new_log_reg.png\" width=600>"
    ]
   },
   {
@@ -612,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
