Notebook updated by fis-canvas image script

--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/new_log_reg.png\" width=600>"
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/new_log_reg.png\" width=600>"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='images/new_small_log.png' width='40%'>"
+    "<img src='https://curriculum-content.s3.amazonaws.com/data-science/images/new_small_log.png' width='40%'>"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='images/new_two_network.png'>"
+    "<img src='https://curriculum-content.s3.amazonaws.com/data-science/images/new_two_network.png'>"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='images/new_small_deeper.png' width='700'>"
+    "<img src='https://curriculum-content.s3.amazonaws.com/data-science/images/new_small_deeper.png' width='700'>"
    ]
   },
   {
